syntax = "proto3";
package pb;
import "google/protobuf/timestamp.proto";
import "userMessage.proto";
import "authMessage.proto";

service AuthService {
  rpc UserLogoutByToken(UserLogoutByTokenRequest) returns (UserLogoutByTokenResponse);
  rpc UserVerifyOtp(UserVerifyOtpRequest) returns (UserVerifyOtpResponse);
  rpc FindUserByToken(FindUserByTokenRequest) returns (User);
}